# simul

./: .clang-format  .gitignore  CMakeLists.txt  README.md
kicad/ALU/: ALU.kicad_prl  ALU.kicad_pro  ALU.kicad_sch
kicad/GP_Reg/: 8bit-register.kicad_prl  8bit-register.kicad_pro  8bit-register.kicad_sch
kicad/LS382/: LS382.kicad_prl  LS382.kicad_pro  LS382.kicad_sch
src/: ALU.h  Addr_Register.cpp  Addr_Register.h  Circuit.cpp  Circuit.h  ControlBus.cpp  ControlBus.h  Device.h  GP_Register.cpp  GP_Register.h  Graphics.h  LS04.cpp  LS04.h  LS08.cpp  LS08.h  LS138.cpp  LS139.cpp  LS139.h  LS245.cpp  LS245.h  LS32.cpp  LS32.h  LS377.cpp  LS377.h  LS574.cpp  LS574.h  LS86.cpp  Latch.cpp  Latch.h  LogicGate.cpp  LogicGate.h  Mem_Register.h  Memory.cpp  Monitor.cpp  Monitor.h  Oscillator.cpp  Oscillator.h  Pin.cpp  Pin.h  PushButton.h  (+6 more)
src/App/: ALU.cpp  ALU.h  Addr_Register.cpp  Addr_Register.h  ControlBus.cpp  ControlBus.h  GP_Register.cpp  GP_Register.h  Mem_Register.cpp  Mem_Register.h  MicroCode.cpp  MicroCode.h  Monitor.cpp  Monitor.h  Simul.cpp  System.cpp  System.h  microcode.grammar
src/ChipTester/: ChipTester.cpp
src/Circuit/: Circuit.cpp  Circuit.h  Device.cpp  Graphics.cpp  Graphics.h  Latch.h  Memory.h  Oscillator.cpp  Oscillator.h  Pin.h  PushButton.h  UtilityDevice.cpp  UtilityDevice.h
src/IC/: LS00.cpp  LS00.h  LS02.cpp  LS02.h  LS04.cpp  LS04.h  LS08.cpp  LS08.h  LS138.cpp  LS138.h  LS139.cpp  LS139.h  LS157.cpp  LS157.h  LS193.cpp  LS193.h  LS21.cpp  LS21.h  LS245.cpp  LS245.h  LS32.cpp  LS32.h  LS377.cpp  LS377.h  LS382.cpp  LS382.h  LS574.cpp  LS574.h  LS86.cpp  LS86.h
src/Lib/: Error.cpp  Error.h  FileBuffer.cpp  FileBuffer.h  Lib.h  Logging.cpp  Logging.h  Options.cpp  Options.h  Resolve.cpp  Resolve.h  Result.h  ScopeGuard.h  Set.h  SimpleFormat.h  TaggedUnion.h  Unescape.cpp  Unescape.h
src/Lib/Grammar/: Grammar.cpp  Grammar.h  Parser.h  Rule.cpp  Sequence.cpp  Symbol.cpp
src/Lib/GrammarParser/: GrammarParser.cpp  GrammarParser.h
src/Lib/Lexer/: Config.cpp  Lexer.cpp  Lexer.h  Token.cpp  TokenKind.cpp
src/Lib/Type/: Type.cpp  Type.h  Value.cpp  Value.h
src/TestBoard/: TestBoard.cpp
test/: test.mc
